Don't round the paint offset when painting carets.

BUG=645446

Review-Url: https://codereview.chromium.org/2361683002
Cr-Commit-Position: refs/heads/master@{#420363}

Former-commit-id: 5d6d94d276b2bd5620397366bdc339c88651e3c9